--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -16,38 +16,17 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/status_bar_title">
 
     <!-- Status bar tweaks -->
     <PreferenceCategory
-        android:title="@string/status_bar_clock_title">
+        android:title="@string/status_bar_style_title">
 
-       <ListPreference
-            android:key="status_bar_clock_style"
-            android:title="@string/status_bar_clock_style_title"
-            android:entries="@array/entries_status_bar_clock_style"
-            android:entryValues="@array/values_status_bar_clock_style"
-            android:persistent="false" />
-
-        <ListPreference
-            android:key="status_bar_am_pm"
-            android:dialogTitle="@string/status_bar_am_pm_title"
-            android:title="@string/status_bar_am_pm_title"
-            android:entries="@array/entries_status_bar_am_pm"
-            android:entryValues="@array/values_status_bar_am_pm" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="status_bar_general"
-        android:title="@string/status_bar_general_title">
-
-        <ListPreference
-            android:key="status_bar_battery"
-            android:dialogTitle="@string/status_bar_battery_title"
-            android:title="@string/status_bar_battery_title"
-            android:entries="@array/entries_status_bar_battery"
-            android:entryValues="@array/values_status_bar_battery" />
+        <PreferenceScreen
+            android:fragment="com.android.settings.cyanogenmod.StatusBarClockStyle"
+            android:key="clock_style_pref"
+            android:title="@string/status_bar_clock" />
 
         <ListPreference
             android:key="status_bar_signal"
@@ -55,6 +34,23 @@
             android:title="@string/status_bar_signal_text_title"
             android:entries="@array/entries_status_bar_signal"
             android:entryValues="@array/values_status_bar_signal" />
+            
+        <PreferenceScreen
+            android:fragment="com.android.settings.cyanogenmod.StatusBarBatteryStyle"
+            android:key="battery_style_pref"
+            android:title="@string/status_bar_battery_icon_bar_title" />    
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="status_bar_general"
+        android:title="@string/status_bar_general_title">
+
+        <CheckBoxPreference
+            android:key="status_bar_brightness_control"
+            android:title="@string/status_bar_toggle_brightness"
+            android:summary="@string/status_bar_toggle_brightness_summary"
+            android:defaultValue="false" />
 
         <CheckBoxPreference
             android:key="status_bar_notif_count"
