--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -15,35 +15,76 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/themes_settings_title" >
+    android:title="@string/lock_screen_title" >
 
-     <PreferenceScreen
+    <PreferenceCategory
+       android:key="lock_screen"
+       android:title="@string/lock_screen_title">
+
+         <PreferenceScreen
          android:key="screen_security"
          android:fragment="com.android.settings.SecuritySettings"
          android:title="@string/screen_security_category"
          android:summary="@string/screen_security_summary">
          <extra android:name="cm_security" android:value="true" />
-     </PreferenceScreen>
+     </PreferenceScreen> 
 
-     <ListPreference
-        android:key="lockscreen_battery_status"
-        android:persistent="false"
-        android:dialogTitle="@string/lockscreen_battery_status_title"
-        android:title="@string/lockscreen_battery_status_title"
-        android:entries="@array/lockscreen_battery_status_entries"
-        android:entryValues="@array/lockscreen_battery_status_values"
-        android:defaultValue="0" />
+         <PreferenceScreen
+             android:key="lock_screen_widgets"
+             android:fragment="com.android.settings.cyanogenmod.LockscreenWidgets"
+             android:title="@string/lockscreen_widgets_title"
+             android:summary="@string/lockscreen_widgets_summary" />
 
-     <CheckBoxPreference
-        android:key="lockscreen_maximize_widgets"
-        android:persistent="false"
-        android:title="@string/lockscreen_maximize_widgets_title"
-        android:summary="@string/lockscreen_maximize_widgets_summary" />
+    </PreferenceCategory>
 
-     <Preference
-        android:fragment="com.android.settings.cyanogenmod.LockscreenTargets"
-        android:key="lockscreen_targets"
-        android:summary="@string/lockscreen_target_summary"
-        android:title="@string/lockscreen_target_title" />
+    <PreferenceCategory
+        android:key="lockscreen_style_options"
+        android:title="@string/lockscreen_style_options_title">
+
+        <ListPreference
+            android:key="lockscreen_background"
+            android:persistent="false"
+            android:dialogTitle="@string/lockscreen_custom_background_title"
+            android:title="@string/lockscreen_custom_background_title"
+            android:entries="@array/lockscreen_background_entries"
+            android:entryValues="@array/lockscreen_background_values"/>
+
+        <com.android.settings.widget.SeekBarPreference
+            android:key="lockscreen_alpha"
+            android:title="@string/lockscreen_alpha_title" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+       android:key="slider_group"
+       android:title="@string/lockscreen_slider_grouptitle">
+
+         <Preference
+            android:fragment="com.android.settings.cyanogenmod.LockscreenTargets"
+            android:key="lockscreen_targets"
+            android:summary="@string/lockscreen_target_summary"
+            android:title="@string/lockscreen_target_title" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+       android:key="options_group"
+       android:title="@string/lockscreen_additional_options_grouptitle">
+
+        <CheckBoxPreference
+                android:key="lockscreen_auto_rotate"
+                android:title="@string/lockscreen_auto_rotate_title"
+                android:summary="@string/lockscreen_auto_rotate_summary" />
+
+         <ListPreference
+            android:key="lockscreen_battery_status"
+            android:persistent="false"
+            android:dialogTitle="@string/lockscreen_battery_status_title"
+            android:title="@string/lockscreen_battery_status_title"
+            android:entries="@array/lockscreen_battery_status_entries"
+            android:entryValues="@array/lockscreen_battery_status_values"
+            android:defaultValue="0" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
