--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -34,14 +34,9 @@
         android:title="@string/power_menu_title"
         android:fragment="com.android.settings.cyanogenmod.PowerMenu" />
 
-    <!-- Lock clock -->
     <PreferenceScreen
-        android:key="lock_clock"
-        android:title="@string/lock_clock_title"
-        android:summary="@string/lock_clock_summary">
-        <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="com.cyanogenmod.lockclock"
-                android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
-    </PreferenceScreen>
+        android:key="navbar_settings"
+        android:fragment="com.android.settings.cyanogenmod.NavbarSettings"
+        android:title="@string/navigation_bar" />
 
 </PreferenceScreen>
