--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -25,6 +25,11 @@
         android:title="@string/status_bar_title" />
 
     <PreferenceScreen
+        android:key="lock_screen_settings"
+        android:fragment="com.android.settings.cyanogenmod.LockscreenInterface"
+        android:title="@string/lock_screen_title" />
+    
+    <PreferenceScreen
         android:id="@+id/statusbar_toggles"
         android:title="@string/qs_title"
         android:fragment="com.android.settings.projectelite.StatusBarToggles" />
